--- a/css/styles-old.css
+++ b/css/styles-old.css
@@ -39,9 +39,9 @@ img {
   margin: 0 auto;
 } */
 
-.section {
+/* .section {
   padding: 120px 0;
-}
+} */
 
 /* header styles */
 /* .header {
@@ -151,7 +151,7 @@ img {
 } */
 
 /* ORDER SECTION STYLES*/
-.order-section {
+/* .order-section {
   display: block;
   padding: 188px 0;
   justify-content: center;
@@ -167,9 +167,9 @@ img {
   margin-left: auto;
   margin-right: auto;
   max-width: 1440px;
-}
+} */
 
-.order-header {
+/* .order-header {
   display: block;
   font-weight: 700;
   font-size: 56px;
@@ -181,9 +181,9 @@ img {
   margin-left: auto;
   margin-right: auto;
   max-width: 496px;
-}
+} */
 
-.order-button {
+/* .order-button {
   display: block;
   border-radius: 4px;
   justify-content: center;
@@ -202,36 +202,36 @@ img {
   border: none;
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
 /* LIST COMMON STYLES*/
-.list-item .item-text {
+/* .list-item .item-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-}
+} */
 
-.list-item .item-header {
+/* .list-item .item-header {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
   margin-bottom: 8px;
-}
+} */
 
-.benefits-list,
+/* .benefits-list,
 .team-list {
   display: flex;
   gap: 24px;
-}
+} */
 
 /* BENEFITS ITEM STYLE */
-.benefits-item {
+/* .benefits-item {
   flex-basis: calc((100% - 72px) / 4);
-}
+} */
 
-.benefits-item-icon {
+/* .benefits-item-icon {
   border: 1px solid #8e8f99;
   border-radius: 4px;
   background: #f4f4fd;
@@ -241,20 +241,19 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-}
+} */
 
-.benefits-icon {
+/* .benefits-icon {
   display: block;
-  /* margin: 24px auto; */
-}
+} */
 
 /* TEAM SECTION STYLES */
-.team {
+/* .team {
   text-align: center;
   background-color: #f4f4fd;
-}
+} */
 
-.team-header {
+/* .team-header {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -262,35 +261,35 @@ img {
   color: #2e2f42;
   text-transform: capitalize;
   margin-bottom: 72px;
-}
+} */
 
-.team-item {
+/* .team-item {
   background-color: #fff;
   flex-basis: calc((100% - 72px) / 4);
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
   border-radius: 0 0 4px 4px;
-}
+} */
 
-.team-card .item-header {
+/* .team-card .item-header {
   margin-bottom: 0;
-}
+} */
 
-.team-card {
+/* .team-card {
   padding: 32px 0;
   display: flex;
   flex-direction: column;
   gap: 8px;
-}
+} */
 
-.social-list {
-  /* display: flex;
-  flex-direction: row; */
+/* .social-list {
+  display: flex;
+  flex-direction: row;
   gap: 24px;
-  /* align-items: center;
+  align-items: center;
   justify-content: center;
-  width: 100%; */
-}
+  width: 100%;
+} */
 
 /* .social-item {
   width: 40px;
@@ -319,7 +318,7 @@ img {
   background-color: #404bbf;
 } */
 
-PORTFOLIO SECTION STYLES
+/* PORTFOLIO SECTION STYLES */
 .portfolio-header {
   font-weight: 700;
   font-size: 36px;
@@ -508,7 +507,7 @@ PORTFOLIO SECTION STYLES
 }
 
 /* benefits header hide */
-.visually-hidden {
+/* .visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -519,7 +518,7 @@ PORTFOLIO SECTION STYLES
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
-}
+} */
 
 /* modal window */
 .backdrop {
