--- a/css/styles-old.css
+++ b/css/styles-old.css
@@ -76,9 +76,9 @@ img {
   color: #2e2f42;
 } */
 
-.footer-logo .footer-logo-part {
+/* .footer-logo .footer-logo-part {
   color: #f4f4fd;
-}
+} */
 
 /* .header-nav {
   display: flex;
@@ -319,7 +319,7 @@ img {
 } */
 
 /* PORTFOLIO SECTION STYLES */
-.portfolio-header {
+/* .portfolio-header {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -328,36 +328,36 @@ img {
   color: #2e2f42;
   text-transform: capitalize;
   margin-bottom: 72px;
-}
+} */
 
-.portfolio-set {
+/* .portfolio-set {
   display: flex;
   flex-wrap: wrap;
   row-gap: 48px;
   column-gap: 24px;
-}
+} */
 
-.portfolio-card {
+/* .portfolio-card {
   display: block;
   width: 360px;
   padding: 32px 16px;
   border-bottom: 1px solid #e7e9fc;
   border-left: 1px solid #e7e9fc;
   border-right: 1px solid #e7e9fc;
-}
+} */
 
-.portfolio-item {
+/* .portfolio-item {
   background-color: #fff;
   width: calc((100% - 48px) / 3);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
-.project-thumb {
+/* .project-thumb {
   position: relative;
   overflow: hidden;
-}
+} */
 
-.project-overlay {
+/* .project-overlay {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -370,86 +370,86 @@ img {
   padding: 40px 32px;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
-.portfolio-item:hover,
+/* .portfolio-item:hover,
 .portfolio-item:focus {
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-}
+} */
 
-.portfolio-item:hover .project-overlay,
+/* .portfolio-item:hover .project-overlay,
 .portfolio-item:focus .project-overlay {
   transform: translateY(0);
-}
+} */
 
 /* FOOTER STYLES */
-.footer {
+/* .footer {
   background: #2e2f42;
   padding: 100px 0;
-}
+} */
 
-.footer-text {
+/* .footer-text {
   display: block;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
   max-width: 264px;
-}
+} */
 
-.footer-logo-thumb {
+/* .footer-logo-thumb {
   margin-right: 120px;
-}
+} */
 
-.footer-social-thumb {
+/* .footer-social-thumb {
   max-width: 208px;
-}
+} */
 
-.social-list.footer-list {
+/* .social-list.footer-list {
   gap: 16px;
-}
+} */
 
-.footer-select-text {
+/* .footer-select-text {
   font-weight: 500;
   color: #fff;
   margin-bottom: 16px;
-}
+} */
 
-.footer-logo {
+/* .footer-logo {
   display: inline-block;
   margin-bottom: 16px;
-}
+} */
 
-.footer-box {
+/* .footer-box {
   display: flex;
   flex-direction: row;
   justify-content: baseline;
   align-items: baseline;
-}
+} */
 
-.social-link:hover.footer-link,
+/* .social-link:hover.footer-link,
 .social-link:focus.footer-link,
 .subscribe-button:focus,
 .subscribe-button:hover {
   background-color: #31d0aa;
-}
+} */
 
-.footer-subscribe-thumb {
+/* .footer-subscribe-thumb {
   max-width: 453px;
   align-items: flex-start;
-  margin-left: auto;
-}
+  margin-left: auto; 
+} */
 
-.subscribe-form {
+/* .subscribe-form {
   display: flex;
   flex-direction: row;
   gap: 24px;
   align-items: center;
   justify-content: space-between;
-}
+} */
 
-.subscribe-email-input {
+/* .subscribe-email-input {
   padding: 8px 16px;
   border: 1px solid #fff;
   border-radius: 4px;
@@ -465,19 +465,19 @@ img {
 
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
-.subscribe-email-input::placeholder {
+/* .subscribe-email-input::placeholder {
   color: #fff;
-}
+} */
 
-.subscribe-email-input:hover,
+/* .subscribe-email-input:hover,
 .subscribe-email-input:focus,
 .subscribe-email-input:focus-within {
   border-color: #31d0aa;
-}
+} */
 
-.subscribe-button {
+/* .subscribe-button {
   display: flex;
   flex-direction: row;
   border-radius: 4px;
@@ -499,12 +499,12 @@ img {
   border: none;
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
-.icon-email-send {
+/* .icon-email-send {
   fill: #fff;
   margin-left: 16px;
-}
+} */
 
 /* benefits header hide */
 /* .visually-hidden {
@@ -521,7 +521,7 @@ img {
 } */
 
 /* modal window */
-.backdrop {
+/* .backdrop {
   position: fixed;
   top: 0;
   left: 0;
@@ -535,9 +535,9 @@ img {
 
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
-.modal-window {
+/* .modal-window {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -552,21 +552,21 @@ img {
 
   transform: translate(-50%, -50%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
 /* анімація модального вікна */
-.backdrop.is-open {
+/* .backdrop.is-open {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
-}
+} */
 
-.backdrop:not(.is-open) .modal-window {
-  transform: translate(-50%, -50%) scale(1.3);
-}
+/* .backdrop:not(.is-open) .modal-window {
+  transform: translate(-50%, -50%) scale(0.3);
+} */
 
 /* кнопка закриття форми */
-.form-close-button {
+/* .form-close-button {
   display: flex;
   position: absolute;
   top: 24px;
@@ -584,7 +584,7 @@ img {
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
 /* .form-close-button:focus,
 .form-close-button:hover {
@@ -603,7 +603,7 @@ img {
 } */
 
 /* Form title */
-.form-title {
+/* .form-title {
   display: block;
   font-weight: 500;
   font-size: 16px;
@@ -613,34 +613,34 @@ img {
   color: #2e2f42;
   max-width: 360px;
   margin-bottom: 16px;
-}
+} */
 
 /* форма введення даних*/
-.user-form {
+/* .user-form {
   display: flex;
   flex-direction: column;
   gap: 8px;
   border-radius: 4px;
   max-width: 360px;
   margin-bottom: 16px;
-}
+} */
 
-.input-box {
+/* .input-box {
   display: flex;
   flex-direction: column;
   margin-bottom: 8px;
   width: 100%;
-}
+} */
 
-.form-label {
+/* .form-label {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
   margin-bottom: 4px;
-}
+} */
 
-.form-input {
+/* .form-input {
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   width: 100%;
@@ -650,13 +650,13 @@ img {
 
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   outline: transparent;
-}
+} */
 
-.input-thumb {
+/* .input-thumb {
   position: relative;
-}
+} */
 
-.form-input-icon {
+/* .form-input-icon {
   position: absolute;
   fill: #2e2f42;
   left: 16px;
@@ -664,13 +664,13 @@ img {
   transform: translateY(-50%);
 
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
-.textarea-box {
+/* .textarea-box {
   margin-bottom: 16px;
-}
+} */
 
-.form-textarea {
+/* .form-textarea {
   resize: none;
   overflow-y: auto;
   padding: 8px 16px;
@@ -680,12 +680,12 @@ img {
   letter-spacing: 0.04em;
   color: rgba(46, 47, 66, 0.4);
   background-color: transparent;
-}
+} */
 
-.form-textarea::placeholder {
+/* .form-textarea::placeholder {
   color: rgba(46, 47, 66, 0.4);
-}
-
+} */
+/* 
 .form-input:focus-within,
 .form-input:focus,
 .form-input:hover {
@@ -696,32 +696,32 @@ img {
 .form-input:focus + .form-input-icon,
 .form-input:hover + .form-input-icon {
   fill: #4d5ae5;
-}
+} */
 
 /* agreement block */
-.agreement-form {
+/* .agreement-form {
   display: flex;
   align-items: center;
   gap: 8px;
   max-width: 360px;
   margin-bottom: 24px;
-}
+} */
 
-.label-ok {
+/* .label-ok {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
-}
+} */
 
-.privacy-policy-ref {
+/* .privacy-policy-ref {
   line-height: 1.33;
   text-decoration: underline;
   text-decoration-skip-ink: none;
   color: #4d5ae5;
-}
+} */
 
-.ok-thumb {
+/* .ok-thumb {
   display: inline-flex;
   position: relative;
   width: 16px;
@@ -741,10 +741,10 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-}
+} */
 
-.input-ok:checked + .label-ok > .ok-thumb {
+/* .input-ok:checked + .label-ok > .ok-thumb {
   background-color: #404bbf;
   border: none;
   fill: #F4F4FD;
-}
+} */
