--- a/css/styles.css
+++ b/css/styles.css
@@ -545,8 +545,7 @@ button {
 
 /* LIST COMMON STYLES - TAB */
 @media screen and (min-width: 768px) {
-  .benefits-list
-  {
+  .benefits-list {
     gap: 72px 24px;
   }
 
@@ -699,17 +698,555 @@ button {
 }
 
 /* PORTFOLIO SECTION STYLES - MOBILE */
-
-
-
-/* TAB - 768px, DESKTOP - 1158px */
-/* 
-@media screen and (min-width: 768px) {
-
-} 
-*/
-
-/* ВИДАЛИТИ ПОТІМ */
-.hidden {
-  display: none;
+.portfolio-header {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  text-transform: capitalize;
+  margin-bottom: 72px;
 }
+
+.portfolio-set {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 48px;
+}
+
+.portfolio-card {
+  display: block;
+  width: 100%;
+  padding: 32px 16px;
+  border-bottom: 1px solid #e7e9fc;
+  border-left: 1px solid #e7e9fc;
+  border-right: 1px solid #e7e9fc;
+}
+
+.portfolio-card .item-header {
+  text-align: left;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+}
+
+.portfolio-card .item-text {
+  font-weight: inherit;
+}
+
+.portfolio-item {
+  background-color: #fff;
+  width: 100%;
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
+.project-thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.project-overlay {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  background-color: #4d5ae5;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  padding: 40px 32px;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item:hover .project-overlay,
+.portfolio-item:focus .project-overlay {
+  transform: translateY(0);
+}
+
+/* PORTFOLIO SECTION STYLES - TAB */
+@media screen and (min-width: 768px) {
+  .portfolio-set {
+    row-gap: 72px;
+    column-gap: 24px;
+  }
+
+  .portfolio-item {
+    width: calc((100% - 24px) / 2);
+  }
+}
+
+/* PORTFOLIO SECTION STYLES - DESKTOP */
+@media screen and (min-width: 1158px) {
+  .portfolio-set {
+    row-gap: 48px;
+  }
+
+  .portfolio-item {
+    box-shadow: none;
+    width: calc((100% - 48px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .portfolio-item:hover,
+  .portfolio-item:focus {
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+      0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  }
+}
+
+/* FOOTER STYLES - MOBILE */
+.footer {
+  background: #2e2f42;
+  padding: 96px 0;
+}
+
+.footer-logo .footer-logo-part {
+  color: #f4f4fd;
+}
+
+.footer-logo {
+  text-align: center;
+}
+
+.footer-text {
+  display: block;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  width: 100%;
+}
+
+.footer-logo-thumb {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  margin-bottom: 79px;
+}
+
+.footer-social-thumb {
+  max-width: 208px;
+  margin: 0 auto 72px;
+}
+
+.social-list.footer-list {
+  gap: 16px;
+}
+
+.footer-select-text {
+  font-weight: 500;
+  color: #fff;
+  margin-bottom: 16px;
+  text-align: center;
+}
+
+.footer-box {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.social-link:hover.footer-link,
+.social-link:focus.footer-link,
+.subscribe-button:focus,
+.subscribe-button:hover {
+  background-color: #31d0aa;
+}
+
+.footer-subscribe-thumb {
+  width: 100%;
+  align-items: space-between;
+  flex-wrap: wrap;
+}
+
+.subscribe-form {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 16px;
+  align-items: center;
+  justify-content: center;
+}
+
+.subscribe-email-input {
+  padding: 8px 16px;
+  border: 1px solid #fff;
+  border-radius: 4px;
+  width: 288px;
+  height: 40px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  opacity: 0.3;
+  background-color: transparent;
+
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #fff;
+
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-email-input::placeholder {
+  color: #fff;
+  opacity: 0.6;
+}
+
+.subscribe-email-input:hover,
+.subscribe-email-input:focus,
+.subscribe-email-input:focus-within {
+  border-color: #31d0aa;
+}
+
+.subscribe-button {
+  display: flex;
+  flex-direction: row;
+  border-radius: 4px;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 8px 24px;
+
+  background-color: #4d5ae5;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+
+  cursor: pointer;
+  min-width: 165px;
+  height: 40px;
+  border: none;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-email-send {
+  fill: #fff;
+  margin-left: 16px;
+}
+
+/* FOOTER STYLES - TAB */
+@media screen and (min-width: 768px) {
+  .footer-logo {
+    text-align: left;
+  }
+
+  .footer-text {
+    max-width: 264px;
+  }
+
+  .footer-logo-thumb {
+    margin-bottom: 0;
+  }
+
+  .footer-social-thumb {
+    margin: 0;
+  }
+
+  .footer-select-text {
+    text-align: left;
+  }
+
+  .footer-box {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 16px;
+    row-gap: 72px;
+  }
+
+  .footer-subscribe-thumb {
+    max-width: 453px;
+    justify-content: flex-start;
+  }
+
+  .subscribe-form {
+    flex-wrap: nowrap;
+    gap: 24px;
+    justify-content: space-between;
+  }
+
+  .subscribe-email-input {
+    max-width: 264px;
+  }
+}
+
+/* FOOTER STYLES - DESKTOP */
+@media screen and (min-width: 1158px) {
+  .footer {
+    padding: 100px 0;
+  }
+
+  .footer-logo-thumb {
+    margin-right: 120px;
+  }
+
+  .footer-box {
+    flex-wrap: nowrap;
+    gap: 0;
+    justify-content: baseline;
+    align-items: baseline;
+  }
+
+  .footer-subscribe-thumb {
+    margin-left: auto;
+  }
+}
+
+/* MODAL WINDOW STYLES - MOBILE*/
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-window {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  width: 288px;
+  min-height: 623px;
+  padding: 72px 16px 24px;
+  border-radius: 4px;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+    0 2px 1px 0 rgba(0, 0, 0, 0.2);
+  background-color: #fcfcfc;
+
+  transform: translate(-50%, -50%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* modal window animation */
+.backdrop.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.backdrop:not(.is-open) .modal-window {
+  transform: translate(-50%, -50%) scale(0.3);
+}
+
+/* form close button */
+.form-close-button {
+  display: flex;
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  cursor: pointer;
+
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  background-color: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* Form title */
+.form-title {
+  display: block;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  max-width: 256px;
+  margin-bottom: 16px;
+}
+
+/* форма введення даних*/
+.user-form {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  border-radius: 4px;
+  max-width: 256px;
+  margin-bottom: 16px;
+}
+
+.input-box {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.form-label {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  margin-bottom: 4px;
+}
+
+.form-input {
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  width: 100%;
+  height: 40px;
+  padding: 11px 11px 11px 33px;
+  background-color: transparent;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: transparent;
+}
+
+.input-thumb {
+  position: relative;
+}
+
+.form-input-icon {
+  position: absolute;
+  fill: #2e2f42;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.textarea-box {
+  margin-bottom: 16px;
+}
+
+.form-textarea {
+  resize: none;
+  overflow-y: auto;
+  padding: 8px 16px;
+  height: 120px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  background-color: transparent;
+}
+
+.form-textarea::placeholder { 
+  color: #8e8f99;
+}
+
+.form-input:focus-within,
+.form-input:focus,
+.form-input:hover {
+  border-color: #4d5ae5;
+}
+
+.form-input:focus-within + .form-input-icon,
+.form-input:focus + .form-input-icon,
+.form-input:hover + .form-input-icon {
+  fill: #4d5ae5;
+}
+
+/* agreement block */
+.agreement-form {
+  display: flex;
+  align-items: center;
+  max-width: 256px;
+  margin-bottom: 24px;
+}
+
+.label-ok {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  align-items: center;
+}
+
+.privacy-policy-ref {
+  line-height: 1.33;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: #4d5ae5;
+}
+
+.ok-thumb {
+  display: inline-flex;
+  position: relative;
+  width: 16px;
+  height: 16px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 2px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  fill: transparent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.label-thumb {
+  display: flex;
+  flex-direction: column;
+  width: 232px;
+}
+
+.icon-ok {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.input-ok:checked + .label-ok > .ok-thumb {
+  background-color: #404bbf;
+  border: none;
+  fill: #F4F4FD;
+}
+
+/* MODAL WINDOW STYLES - TAB */
+@media screen and (min-width: 768px) {
+.modal-window {
+  width: 408px;
+  min-height: 584px;
+  padding: 72px 24px 24px;
+}
+
+.form-title {
+  max-width: 360px;
+}
+
+.user-form {
+  max-width: 360px;
+}
+
+.form-input {
+  padding-left: 34px;
+}
+
+.agreement-form {
+  max-width: 360px;
+}
+} 
+
+/* MODAL WINDOW STYLES - DESKTOP */
+@media screen and (min-width: 1158px) {
+  .form-input {
+    padding-left: 38px;
+  }
+} 
