--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@ body {
 
 a {
   text-decoration: none;
+  font-style: normal;
 }
 
 h1,
@@ -220,6 +221,7 @@ button {
 .social-item {
   width: 40px;
   height: 40px;
+  flex-shrink: 0;
 }
 
 .social-link {
@@ -259,6 +261,8 @@ button {
 
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
+  z-index: 500;
 }
 
 .mobile-menu-container {
@@ -353,11 +357,14 @@ button {
   color: #404bbf;
 }
 
+.menu-contacts {
+  margin-bottom: 48px;
+}
+
 .menu-contacts-list {
   display: flex;
   flex-direction: column;
   gap: 24px;
-  margin-bottom: 48px;
 }
 
 .menu-contacts-link {
@@ -376,7 +383,7 @@ button {
 }
 
 .menu-social-list {
-  align-items: flex-start;
+  align-items: center;
   gap: 40px;
 }
 
@@ -541,6 +548,7 @@ button {
   display: flex;
   flex-wrap: wrap;
   gap: 72px;
+  justify-content: center;
 }
 
 /* LIST COMMON STYLES - TAB */
@@ -681,7 +689,6 @@ button {
 @media screen and (min-width: 768px) {
   .team-list {
     gap: 64px 24px;
-    justify-content: center;
   }
 }
 
@@ -689,7 +696,6 @@ button {
 @media screen and (min-width: 1158px) {
   .team-list {
     gap: 24px;
-    justify-content: center;
   }
 
   .team-item {
@@ -698,6 +704,7 @@ button {
 }
 
 /* PORTFOLIO SECTION STYLES - MOBILE */
+
 .portfolio-header {
   font-weight: 700;
   font-size: 36px;
@@ -958,6 +965,7 @@ button {
     flex-wrap: wrap;
     column-gap: 16px;
     row-gap: 72px;
+    padding: 0 108px;
   }
 
   .footer-subscribe-thumb {
@@ -991,6 +999,7 @@ button {
     gap: 0;
     justify-content: baseline;
     align-items: baseline;
+    padding: 0 16px;
   }
 
   .footer-subscribe-thumb {
@@ -1198,6 +1207,7 @@ button {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  flex-shrink: 0;
 }
 
 .label-thumb {
